--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <tr>
       <td><img src="tom.png" alt="Not Available"></td>
       <td>
-        <h1>Yash Pratap Singh</h1>
+        <h1>Yash Pratap Singh greatest man alive</h1>
         <p><em>Student at <strong><a href="https://bvucoepune.edu.in/">Bharati Vidyapeeth College of Engineering, Pune</a></strong></em></p>
         <p>Just a normal student in Electronics and Communication Branch</p>
       </td>
