--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <td><img src="tom.png" alt="Not Available"></td>
       <td>
         <h1>Yash Pratap Singh greatest man alive</h1>
-        <p><em>Student at <strong><a href="https://bvucoepune.edu.in/">Bharati Vidyapeeth College of Engineering, Pune</a></strong></em></p>
+        <p><em>Student at <strong><a href="https://bvucoepune.edu.in/">Bharati Vidyapeeth College of Engineering, Pune graduated now</a></strong></em></p>
         <p>Just a normal student in Electronics and Communication Branch</p>
       </td>
     </tr>
